# rms-vad

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
examples/: with_asr.py
rms_vad/: __init__.py  audio_utils.py  config.py  core.py  events.py
tests/: test_audio_utils.py  test_core.py  test_integration.py
